Fix: fix vertical gap issue between svg and input in CheckBox comp

--- a/components/atoms/CheckBox.module.scss
+++ b/components/atoms/CheckBox.module.scss
@@ -1,7 +1,10 @@
 .wrapper {
     position: relative;
+    display: flex;
     width: 20px;
     height: 20px;
+    align-items: center;
+
     input {
         width: 20px;
         height: 20px;
@@ -17,7 +20,7 @@
     span {
         position: absolute;
         z-index: -1;
-        top: 25%;
+        top: 50%;
         left: 50%;
         width: 20px;
         height: 20px;
